[gd_scene load_steps=10 format=2]

[ext_resource path="res://door.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/SPRITES/door/door_3.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/SPRITES/door/door_1.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/SPRITES/door/door_open.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/objects/Platformer-25-Assets/upgrade1.ogg" type="AudioStream" id=5]
[ext_resource path="res://ASSETS/soundsandmusic/sounds/error_007.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 26 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 77.5, 36.5 )

[node name="door" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -17 )
scale = Vector2( 0.863281, 0.778825 )
frames = SubResource( 1 )
animation = "locked"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -20 )
shape = SubResource( 2 )

[node name="nearDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="nearDoor"]
position = Vector2( -1, -19 )
shape = SubResource( 3 )

[node name="soundUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -16.0

[node name="soundLocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -16.0

[node name="Timer_teleport" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="." to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_door_body_exited"]
[connection signal="body_entered" from="nearDoor" to="." method="_on_nearDoor_body_entered"]
[connection signal="timeout" from="Timer_teleport" to="." method="teleport"]
